...
  prefixes: ['homegroups-app://', 'https://homegroups-app.com'],
  config: {
    screens: {
      JoinGroupFlow: 'join',
      Main: {
        screens: {
          Home: {
            screens: {
              GroupOverview: {
                path: 'group-overview',
                parse: {
                  groupId: (groupId: string) => {
                    return groupId;
...
          setTimeout(() => {
            Alert.alert(
              'Payment Failed',
              decodeURIComponent(error || 'An error occurred during payment.'),
              [
                {
                  text: 'OK',
                  onPress: () => {
                    if (groupId && navigationRef.current) {
                      navigationRef.current.navigate('Main', {
                        screen: 'Home',
                        params: {
                          screen: 'GroupOverview',
...
